     Mb; you can customize this using the --max-msg-size parameter to
     mu index.
   - implement "lazy-checking", which makes mu not descend into
     subdirectories when the directory-timestamp is up to date;
     greatly speeds up indexing (see --lazy-check)
   - prefer gpg2 for crypto
   - fix a crash when running on OpenBSD
   - fix --clear-links (broken filenames)
    
*** mu4e

**** reading messages
     
   - Add `mu4e-action-view-with-xwidget`, and action for viewing
     e-mails inside a Webkit-widget inside emacs (requires emacs 25.x
     with xwidget/webkit/gtk3 support)
   - Explicitly specify utf8 for external html viewing, so browsers
     can handle it correctly.
   - Make `shr' the default renderer for rich-text emails (when
     available)
   - Add a :user-agent field to the message-sexp (in mu4e-view), which
     is either the User-Agent or X-Mailer field, when present.

**** composing messages
     
   - Cleanly handle early exits from message composition as well as
     while composing.
   - Allow for resending existing messages, possibly editing them. M-x
     mu4e-compose-resend, or use the menu; no shortcut.
   - Better handle the closing of separate compose frames
   - Improved font-locking for the compose buffers, and more extensive
     checks for cited parts.
   - automatically sign/encrypt replies to signed/encrypted messages
     (subject to `mu4e-compose-crypto-reply-policy')

**** searching & marking

   - Add a hook `mu4e-mark-execute-pre-hook`, which is run just before
     executing marks.
   - Just before executing any search, a hook-function
     `mu4e-headers-search-hook` is invoked, which receives the
     search expression as its parameter.
   - In addition, there's a `mu4e-headers-search-bookmark-hook` which
     gets called when searches get invoked as a bookmark (note that
     `mu4e-headers-search-hook` will also be called just
     afterwards). This hook also receives the search expression as its
     parameter.